--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,9 @@
         <p>Email: <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">narendrasaigarlapati@gmail.com</a></p>
         <p>LinkedIn: <a href="#" target="_blank">narendrasai</a></p>
     </section>
-
     
+    <footer>
+        <p>&copy; 2024 Narendra Sai. All rights reserved.</p>
+    </footer>
 </body>
 </html>
