--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="icon" href="favicon_io.zip" type="image/png">
+    <link rel="icon" href="favicon_io" type="image/png">
 </head>
+
 <body>
     <header>
         <h1><u>My Portfolio</u></h1>
@@ -14,54 +16,121 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#education">education</a></li>
+                <li><a href="#skills">skills</a></li>
             </ul>
         </nav>
     </header>
 
+    <div>
+        <img src="pic.png" width="150px" height="110px" alt="Profile name">
+        <h3>Hi, my name is Narendra Sai</h3>
+        <p>Web Developer | Designer |</p>
+    </div>
+
+
     <section id="about">
-        <h2><u>About Me</u></h2>
-        <p>Hello! <b>I am Narendra Sai</b>, I'm a B.Tech graduate in Electronics and Communication Engineering who is looking
-            for a job in a reputable firm to further my career and apply my technical expertise
-            and experience to raise the company's profile</p>
+        <h1><u>About Me</u></h1>
+        <img src="pic1.jpg" alt="narendra Profile">
+        <pre>Hello! <b>I am Narendra Sai</b>, I'm a B.Tech graduate in Electronics and Communication Engineering who is looking
+        for a job in a reputable firm to further my career and apply my technical expertise
+        and experience to raise the company's profile</pre>
     </section>
 
-    <section id="projects">
-        <h2><u>Projects</u></h2>
-        <article>
-            <ul>
-           <li><h3>Project 1</h3></li> 
-            <p><b><u>RESTAURANT MANAGEMENT SYSTEM</b></u><br>
-                python application to manage orders in restaurant,A Restaurant Management System is a helpful tool that streamlines the process of taking, processing, and managing customer orders, ensuring efficient operation and improved customer service.</p>
-            </ul>
-        </article>
+    <section id="education">
+        <h1><u>Education</u></h1>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Institution</th>
+                    <th>Degree</th>
+                    <th>Year</th>
+                </tr>
+            </thead>
 
-        <article>
-            <ul>
-           <li><h3>Project 2</h3></li> 
-            <p><b><u>CALCULATOR</b></u><br>
-                A Scientific Calculator in Python is an application that allows users to perform various mathematical operations beyond basic arithmetic. It includes functions such as trigonometric calculations, logarithms, exponentiation, and more. This can be a command-line application where users input their calculations, and the program returns the results.</p>
-            </ul>
-        </article>
+            <tbody>
+                <tr>
+                    <td>Bharath Institute Of Higher Education And Research</td>
+                    <td>Bachelor Of Technology</td>
+                    <td>2023 passout</td>
+                </tr>
+                <tr>
+                    <td>Sri Chaitanya Junior College</td>
+                    <td>Intermediate</td>
+                    <td>2019 passout</td>
+                </tr>
+                <tr>
+                    <td>Bhashyam High School</td>
+                    <td>High School</td>
+                    <td>2017 passout</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 
-        <article>
-            <ul>
-           <li><h3>Project 3</h3></li> 
-            <p><b><u>SIMPLE WATER LEVEL DETECTION</b></u><br>
-                Creating a simple water level detection project using a transistor and resistors is a great hands-on project. This basic circuit can detect when water reaches a certain level by using the conductivity of water to trigger the transistor. Here's a step-by-step guide.
-            </p>
+    <section id="skills">
+        <h1><u>Skills</u></h1>
+        <ul>
+            <li>PYTHON</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
         </ul>
+    </section>
+
+
+    <section id="projects">
+        <h1><u>Projects</u></h1>
+        <article>
+            <ul>
+                <li>
+                    <h3>Project 1</h3>
+                </li>
+                <p><b><u>RESTAURANT MANAGEMENT SYSTEM</b></u><br>
+                    python application to manage orders in restaurant,A Restaurant Management System is a helpful tool
+                    that streamlines the process of taking, processing, and managing customer orders, ensuring efficient
+                    operation and improved customer service.</p>
+            </ul>
         </article>
-       
+
+        <article>
+            <ul>
+                <li>
+                    <h3>Project 2</h3>
+                </li>
+                <p><b><u>CALCULATOR</b></u><br>
+                    A Scientific Calculator in Python is an application that allows users to perform various
+                    mathematical operations beyond basic arithmetic. It includes functions such as trigonometric
+                    calculations, logarithms, exponentiation, and more. This can be a command-line application where
+                    users input their calculations, and the program returns the results.</p>
+            </ul>
+        </article>
+
+        <article>
+            <ul>
+                <li>
+                    <h3>Project 3</h3>
+                </li>
+                <p><b><u>SIMPLE WATER LEVEL DETECTION</b></u><br>
+                    Creating a simple water level detection project using a transistor and resistors is a great hands-on
+                    project. This basic circuit can detect when water reaches a certain level by using the conductivity
+                    of water to trigger the transistor. Here's a step-by-step guide.
+                </p>
+            </ul>
+        </article>
+
     </section>
 
     <section id="contact">
         <h2><u>Contact</u></h2>
-        <p>Email: <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">narendrasaigarlapati@gmail.com</a></p>
+        <p>Email: <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">narendrasaigarlapati@gmail.com</a>
+        </p>
         <p>LinkedIn: <a href="#" target="_blank">narendrasai</a></p>
     </section>
-    
+
     <footer>
         <p>&copy; 2024 Narendra Sai. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
